-----2.9 -----
Bug fixes:
    * Fix compiling with Cantor 20.08.X and X>0
    * Parser improvements ("Generate Function Values"):
        * Fix Crash using variable name of pre-defined functions as function ("sin()")
        * Allow variable names containing function names ("sina")
        * Correctly remove variables when changing name
-----2.8 -----
	* Improved DateTime data support
	* Show the size of the members in the JSON file in the import file dialog
	* [worksheet] In the Export Worksheet Dialog allow to export to the clipboard
	* [worksheet] Allow to move plots, text labels and legend with arrow keys
	* [worksheet] Image worksheet element
	* [worksheet] Reference line on the plot
	* [worksheet] Support for imperial units for geometry and size settings of objects
	* [worksheet] Improve axes major and minor tick settings
	* [spreadsheet] show infinite values as such and not as NaN
	* [spreadsheet] support big integer (64 bit) as data type
	* [spreadsheet] column normalization methods "divide by max", "divide by min", etc.
	* [spreadsheet] Tukey's ladder of powers
	* [spreadsheet] added the size of the data set, its mode, 1st and 3rd quartiles and IQR to the column statistics
	* [analysis] calculate and expose the rough values as the result of a smooth (data = smooth + rough)
	* Allow to open Cantor and Jupyter projects
	* [Windows] improved craft blueprint and installer package
	* [macOS] added support for touchbar
	* Support global user specified decimal separator
	* Improved locale support in number input fields
	* Extended "About"-Dialog

Bug fixes:
    BUG: 421193 - import float(4) data from hdf5
    BUG: 418390 - Ignore infinite values (created in CAS worksheets for example) in curves
    BUG: 412455 - Don't crash (sporadically) when opening the color scheme menu
    BUG: 415214 - Better algorithm to draw the error bar caps
    BUG: 413397 - Properly handle removal of columns in the spreadsheet model