@@ -1297,7 +1297,8 @@ bool ExpressionParser::isValid(const QString& expr, const QStringList& vars) {
 	for (const auto& var: vars)
 		assign_symbol(qPrintable(var), 0);
 
-	parse(qPrintable(expr));
+	SET_NUMBER_LOCALE
+	parse(qPrintable(expr), qPrintable(numberLocale.name()));
 
 	/*TODO: check if we accidentally remove used constants here */
 	for (const auto& var: vars)
@@ -1347,11 +1348,12 @@ bool ExpressionParser::evaluateCartesian(const QString& expr, const QString& min
 	for (int i = 0; i < paramNames.size(); ++i)
 		assign_symbol(qPrintable(paramNames.at(i)), paramValues.at(i));
 
+	SET_NUMBER_LOCALE
 	for (int i = 0; i < count; i++) {
 		const double x{ range.min() + step * i };
 		assign_symbol("x", x);
 
-		const double y{ parse(qPrintable(expr)) };
+		const double y{ parse(qPrintable(expr), qPrintable(numberLocale.name())) };
 		if (parse_errors() > 0)
 			return false;
 
@@ -1370,11 +1372,12 @@ bool ExpressionParser::evaluateCartesian(const QString& expr, const QString& min
 	const Range<double> range{min, max};
 	const double step = range.stepSize(count);
 
+	SET_NUMBER_LOCALE
 	for (int i = 0; i < count; i++) {
 		const double x{ range.min() + step * i };
 		assign_symbol("x", x);
 
-		const double y{ parse(qPrintable(expr)) };
+		const double y{ parse(qPrintable(expr), qPrintable(numberLocale.name())) };
 		if (parse_errors() > 0)
 			return false;
 
@@ -1389,9 +1392,10 @@ bool ExpressionParser::evaluateCartesian(const QString& expr, QVector<double>* x
 	DEBUG(Q_FUNC_INFO << ", v3")
 	gsl_set_error_handler_off();
 
+	SET_NUMBER_LOCALE
 	for (int i = 0; i < xVector->count(); i++) {
 		assign_symbol("x", xVector->at(i));
-		const double y = parse(qPrintable(expr));
+		const double y = parse(qPrintable(expr), qPrintable(numberLocale.name()));
 
 		if (parse_errors() > 0)
 			return false;
@@ -1410,10 +1414,11 @@ bool ExpressionParser::evaluateCartesian(const QString& expr, QVector<double>* x
 	for (int i = 0; i < paramNames.size(); ++i)
 		assign_symbol(qPrintable(paramNames.at(i)), paramValues.at(i));
 
+	SET_NUMBER_LOCALE
 	for (int i = 0; i < xVector->count(); i++) {
 		assign_symbol("x", xVector->at(i));
 
-		const double y = parse(qPrintable(expr));
+		const double y = parse(qPrintable(expr), qPrintable(numberLocale.name()));
 		if (parse_errors() > 0)
 			return false;
 
@@ -1443,11 +1448,12 @@ bool ExpressionParser::evaluateCartesian(const QString& expr, const QStringList&
 		minSize = yVector->size();
 
 	// calculate values
+	SET_NUMBER_LOCALE
 	for (int i = 0; i < minSize; i++) {
 		for (int n = 0; n < vars.size(); ++n)
 			assign_symbol(qPrintable(vars.at(n)), xVectors.at(n)->at(i));
 
-		const double y = parse(qPrintable(expr));
+		const double y = parse(qPrintable(expr), qPrintable(numberLocale.name()));
 		if (parse_errors() > 0)
 			return false;
 
@@ -1468,11 +1474,12 @@ bool ExpressionParser::evaluatePolar(const QString& expr, const QString& min, co
 	const Range<double> range{min, max};
 	const double step = range.stepSize(count);
 
+	SET_NUMBER_LOCALE
 	for (int i = 0; i < count; i++) {
 		const double phi = range.min() + step * i;
 		assign_symbol("phi", phi);
 
-		const double r = parse(qPrintable(expr));
+		const double r = parse(qPrintable(expr), qPrintable(numberLocale.name()));
 		if (parse_errors() > 0)
 			return false;
 
@@ -1490,14 +1497,15 @@ bool ExpressionParser::evaluateParametric(const QString& xexpr, const QString& y
 	const Range<double> range{min, max};
 	const double step = range.stepSize(count);
 
+	SET_NUMBER_LOCALE
 	for (int i = 0; i < count; i++) {
 		assign_symbol("t", range.min() + step * i);
 
-		const double x = parse(qPrintable(xexpr));
+		const double x = parse(qPrintable(xexpr), qPrintable(numberLocale.name()));
 		if (parse_errors() > 0)
 			return false;
 
-		const double y = parse(qPrintable(yexpr));
+		const double y = parse(qPrintable(yexpr), qPrintable(numberLocale.name()));
 		if (parse_errors() > 0)
 			return false;
 
