@@ -769,6 +769,7 @@ int func_f(const gsl_vector* paramValues, void* params, gsl_vector* f) {
 			<<"] free/bound:"<<QString::number(v, 'g', 15)<<' '<<QString::number(nsl_fit_map_bound(v, min[i], max[i]), 'g', 15));
 	}
 
+	SET_NUMBER_LOCALE
 	QString func{*(((struct data*)params)->func)};
 	for (size_t i = 0; i < n; i++) {
 		if (std::isnan(x[i]) || std::isnan(y[i]))
@@ -783,7 +784,7 @@ int func_f(const gsl_vector* paramValues, void* params, gsl_vector* f) {
 
 		assign_symbol("x", x[i]);
 		//DEBUG("evaluate function \"" << func << "\" @ x = " << x[i] << ":");
-		double Yi = parse(qPrintable(func));
+		double Yi = parse(qPrintable(func), qPrintable(numberLocale.name()));
 		//DEBUG("	f(x["<< i <<"]) = " << Yi);
 
 		if (parse_errors() > 0)
@@ -1466,6 +1467,7 @@ int func_df(const gsl_vector* paramValues, void* params, gsl_matrix* J) {
 		const unsigned int np = paramNames->size();
 		QString func{*(((struct data*)params)->func)};
 
+		SET_NUMBER_LOCALE
 		for (size_t i = 0; i < n; i++) {
 			x = xVector[i];
 			assign_symbol("x", x);
@@ -1480,14 +1482,14 @@ int func_df(const gsl_vector* paramValues, void* params, gsl_matrix* J) {
 
 				value = nsl_fit_map_bound(gsl_vector_get(paramValues, j), min[j], max[j]);
 				assign_symbol(qPrintable(paramNames->at(j)), value);
-				const double f_p = parse(qPrintable(func));
+				const double f_p = parse(qPrintable(func), qPrintable(numberLocale.name()));
 
 				double eps = 1.e-9;
 				if (std::abs(f_p) > 0)
 					eps *= std::abs(f_p);	// scale step size with function value
 				value += eps;
 				assign_symbol(qPrintable(paramNames->at(j)), value);
-				const double f_pdp = parse(qPrintable(func));
+				const double f_pdp = parse(qPrintable(func), qPrintable(numberLocale.name()));
 
 //				DEBUG("evaluate deriv"<<func<<": f(x["<<i<<"]) ="<<QString::number(f_p, 'g', 15));
 //				DEBUG("evaluate deriv"<<func<<": f(x["<<i<<"]+dx) ="<<QString::number(f_pdp, 'g', 15));
