@@ -174,11 +174,12 @@ public:
 		DEBUG("FILL col"<<m_startCol<<"-"<<m_endCol<<" x/y ="<<x<<'/'<<y<<" steps ="<<m_xStep<<'/'<<m_yStep<<" rows ="<<rows);
 
 		parser_var vars[] = { {"x", x}, {"y", y}};
+		SET_NUMBER_LOCALE
 		for (int col = m_startCol; col < m_endCol; ++col) {
 			vars[0].value = x;
 			for (int row = 0; row < rows; ++row) {
 				vars[1].value = y;
-				double z = parse_with_vars(m_func, vars, 2);
+				double z = parse_with_vars(m_func, vars, 2, qPrintable(numberLocale.name()));
 				//qDebug()<<" z ="<<z;
 				m_matrixData[col][row] = z;
 				y += m_yStep;
@@ -249,11 +250,12 @@ void MatrixFunctionDialog::generate() {
 */
 	double x = 0, y = 0;
 	parser_var vars[] = {{"x", x}, {"y", y}};
+	SET_NUMBER_LOCALE
 	for (int col = 0; col < m_matrix->columnCount(); ++col) {
 		vars[0].value = x;
 		for (int row = 0; row < m_matrix->rowCount(); ++row) {
 			vars[1].value = y;
-			(new_data->operator[](col))[row] = parse_with_vars(func, vars, 2);
+			(new_data->operator[](col))[row] = parse_with_vars(func, vars, 2, qPrintable(numberLocale.name()));
 			y += yStep;
 		}
 		y = m_matrix->yStart();
