@@ -5,6 +5,7 @@ Bug fixes:
         * Fix Crash using variable name of pre-defined functions as function ("sin()")
         * Allow variable names containing function names ("sina")
         * Correctly remove variables when changing name
+	* Use application number locale
 -----2.8 -----
 	* Improved DateTime data support
 	* Show the size of the members in the JSON file in the import file dialog
